--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,11 @@ language: csharp
 mono: none
 dotnet: 3.1.201
 
+before_install:
+  cd ./src
+
 install:
   - dotnet restore
-
-before_script:
-  cd ./src
 
 script:
   - dotnet build
