--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: csharp
+os: windows
 mono: none
 dotnet: 3.1.201
 
@@ -12,5 +13,5 @@ script:
   - dotnet build
   - dotnet test --collect:"XPlat Code Coverage"
 
-  after_script:
-        - bash <(curl -s https://codecov.io/bash)
+after_script:
+  - bash <(curl -s https://codecov.io/bash)
